--- a/practca_sfml/CMakeLists.txt
+++ b/practca_sfml/CMakeLists.txt
@@ -3,11 +3,11 @@ project(practca_sfml)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(practca_sfml main.cpp Juego.cpp Juego.h Dado.cpp Dado.h Nodo.cpp Nodo.h Casilla.cpp Casilla.h Ficha.cpp Ficha.h tablero.cpp tablero.h Recorrido.cpp Recorrido.h)
+add_executable(practca_sfml main.cpp Juego.cpp Juego.h Dado.cpp Dado.h Tablero.cpp Tablero.h Casilla.cpp Casilla.h Jugador.cpp Jugador.h Ficha.cpp Ficha.h Nodo.cpp Nodo.h Recorrido.cpp Recorrido.h)
 
-set(SFML_INCLUDE_DIR "SFML-2.5.1/include")
-set(SFML_LIBRARY_DIR "SFML-2.5.1/lib")
-set(SFML_DIR "SFML-2.5.1/lib/cmake/SFML")
+set(SFML_INCLUDE_DIR "/home/bhn16/Descargas/SFML-2.5.1/include")
+set(SFML_LIBRARY_DIR "/home/bhn16/Descargas/SFML-2.5.1/lib")
+set(SFML_DIR "/home/bhn16/Descargas/SFML-2.5.1/lib/cmake/SFML")
 
 link_directories(SFML_LIBRARY_DIR)
 include_directories(SFML_INCLUDE_DIR)
